tests/spread/spread.exp
Error: test3.js:8
  8: var y: number = o.y;
                     ^^^ Cannot assign `o.y` to `y` because string [1] is incompatible with number [2].
  References:
    1: var p = { y: "" };
                    ^^ [1]: string
    8: var y: number = o.y;
              ^^^^^^ [2]: number

Error: test3.js:9
  9: var z: number = o.z;
                     ^^^ Cannot assign `o.z` to `z` because string [1] is incompatible with number [2].
  References:
    2: var q = { z: "" };
                    ^^ [1]: string
    9: var z: number = o.z;
              ^^^^^^ [2]: number

Error: test3.js:17
 17: var t: boolean = s.y; // error, string or number
                      ^^^ Cannot assign `s.y` to `t` because number [1] is incompatible with boolean [2].
  References:
   12: var r = { y: 123 };
                    ^^^ [1]: number
   17: var t: boolean = s.y; // error, string or number
              ^^^^^^^ [2]: boolean

Error: test3.js:17
 17: var t: boolean = s.y; // error, string or number
                      ^^^ Cannot assign `s.y` to `t` because string [1] is incompatible with boolean [2].
  References:
    1: var p = { y: "" };
                    ^^ [1]: string
   17: var t: boolean = s.y; // error, string or number
              ^^^^^^^ [2]: boolean

Error: test6.js:10
 10: (p: {foo: string; abc: string}); // error, p doesn't have `abc` yet
      ^ object literal. This type is incompatible with
 10: (p: {foo: string; abc: string}); // error, p doesn't have `abc` yet
         ^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `abc` is incompatible:
     10: (p: {foo: string; abc: string}); // error, p doesn't have `abc` yet
             ^^^^^^^^^^^^^^^^^^^^^^^^^^ property `abc`. Property not found in
     10: (p: {foo: string; abc: string}); // error, p doesn't have `abc` yet
          ^ object literal

Error: test7.js:6
  6:     ({...x}: void); // error, Object
          ^^^^^^ Cannot cast object literal to undefined because object literal [1] is incompatible with undefined [2].
  References:
    6:     ({...x}: void); // error, Object
            ^^^^^^ [1]: object literal
    6:     ({...x}: void); // error, Object
                    ^^^^ [2]: undefined

Error: test8.js:7
  7: ({ ...o }: { p: number, q: number }); // error: string ~> number (prop q)
      ^^^^^^^^ Cannot cast object literal to object type because in property `q`, string [1] is incompatible with number [2].
  References:
   12: type B = { q: string };
                     ^^^^^^ [1]: string
    7: ({ ...o }: { p: number, q: number }); // error: string ~> number (prop q)
                                  ^^^^^^ [2]: number

Error: test8.js:8
  8: ({ ...o }: { p: string, q: string }); // error: number ~> string (prop p)
      ^^^^^^^^ Cannot cast object literal to object type because in property `p`, number [1] is incompatible with string [2].
  References:
   11: type A = { p: number };
                     ^^^^^^ [1]: number
    8: ({ ...o }: { p: string, q: string }); // error: number ~> string (prop p)
                       ^^^^^^ [2]: string

Error: test9.js:5
  5: ({ ...o_call }: { "$call": any }); // error: callable should not be copied
      ^^^^^^^^^^^^^ object literal. This type is incompatible with
  5: ({ ...o_call }: { "$call": any }); // error: callable should not be copied
                     ^^^^^^^^^^^^^^^^ object type
  Callable property is incompatible:
      5: ({ ...o_call }: { "$call": any }); // error: callable should not be copied
                         ^^^^^^^^^^^^^^^^ property `$call`. Callable signature not found in
      5: ({ ...o_call }: { "$call": any }); // error: callable should not be copied
          ^^^^^^^^^^^^^ object literal

Error: test9.js:11
 11: ({ ...o_index }: { "$key": any }); // error: indexer key should not be copied
      ^^^^^^^^^^^^^^ object literal. This type is incompatible with
 11: ({ ...o_index }: { "$key": any }); // error: indexer key should not be copied
                      ^^^^^^^^^^^^^^^ object type
  Indexable signature is incompatible:
     11: ({ ...o_index }: { "$key": any }); // error: indexer key should not be copied
                          ^^^^^^^^^^^^^^^ property `$key`. Indexable signature not found in
     11: ({ ...o_index }: { "$key": any }); // error: indexer key should not be copied
          ^^^^^^^^^^^^^^ object literal

Error: test9.js:12
 12: ({ ...o_index }: { "$value": any }); // error: indexer value should not be copied
      ^^^^^^^^^^^^^^ object literal. This type is incompatible with
 12: ({ ...o_index }: { "$value": any }); // error: indexer value should not be copied
                      ^^^^^^^^^^^^^^^^^ object type
  Indexable signature is incompatible:
     12: ({ ...o_index }: { "$value": any }); // error: indexer value should not be copied
                          ^^^^^^^^^^^^^^^^^ property `$value`. Indexable signature not found in
     12: ({ ...o_index }: { "$value": any }); // error: indexer value should not be copied
          ^^^^^^^^^^^^^^ object literal


Found 11 errors
